Tue Feb  5 16:37:00 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/config_file.rb:  Ignore permissions check on windows.
	  Windows writes 0600 file as 0644 permissions making the check
	  useless.

Tue Feb  5 16:25:25 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_method.c (rb_obj_respond_to): drop optional include_all flag if
	  respond_to? method is defined in old style.  [Bug #7722]

Tue Feb 05 15:04:34 2013  Koichi Sasada  <ko1@atdot.net>

	* proc.c (rb_binding_new_with_cfp): permit to create binding object
	  of IFUNC frame.
	  When `rb_binding_new_with_cfp()' is called, VM finds out the first
	  normal (has iseq) frame and create a binding object of this frame
	  and create Env objects. `ep's of related frames are updated
	  (`ep's point Env object managed spaces).
	  However, `ep' of skipped IFUNC frame was not updated and
	  old invalid `ep' was remained. It causes serious problems.
	  To solve this issue, permit IFUNC to create binding.
	  (Maybe there is no problem on it)
	  [ruby-dev:46908] [ruby-trunk - Bug #7774]

	* test/ruby/test_settracefunc.rb: add a test.

	* vm.c (rb_vm_get_binding_creatable_next_cfp), vm_core.h: added.

	* vm_trace.c: fix to use `rb_vm_get_binding_creatable_next_cfp()'.

Tue Feb  5 14:43:15 2013  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/matrix.rb: Fix error message, patch by pypypy [Bug #7777]

Tue Feb  5 14:36:04 2013  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* numeric.c (fix_pow): Handle special cases when base is 0, -1 or +1
	  [Bug #5713] [Bug #5715]

	* rational.c (nurat_expt): ditto

Tue Feb  5 13:27:53 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/io/console/console.c (rawmode_opt): use default values by `stty
	  raw`.

Tue Feb  5 12:50:47 2013  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* range.c: Use div instead of / for bsearch

	* test/ruby/test_range.rb: Test showing bug when requiring mathn
