@@ -1,3 +1,9 @@
+Tue Feb  5 17:24:02 2013  Eric Hodel  <drbrain@segment7.net>
+
+	* lib/rdoc/servlet.rb:  Fixed root search paths, filesystem paths
+	  instead of HTTP paths were returned.
+	* test/rdoc/test_rdoc_servlet.rb:  Test for above.
+
 Tue Feb  5 16:37:00 2013  Eric Hodel  <drbrain@segment7.net>
 
 	* lib/rubygems/config_file.rb:  Ignore permissions check on windows.
